- Added OAuth - Added login

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello">Hello World, HomeActivity!</string>
     <string name="app_name">Tracking</string>
     <string name="title_recent_orders">Recent Orders</string>
+    <string name="title_order_detail">Order Detail</string>
     <string name="title_search">Search</string>
     <string name="title_exit">Exit</string>
     
@@ -12,6 +13,9 @@
     <string name="last_updated">Last updated on</string>
     <string name="fetching_orders">Fetching new orders from server...</string>
     <string name="data_uptodate">All data is up to date.</string>
+    <string name="login_username">Username:</string>
+    <string name="login_password">Password:</string>
+    <string name="login_button">Login</string>
     
 
 </resources>
