--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,6 +37,8 @@
     <!-- Search -->
     <string name="search_pickup_date_title">Pickup date</string>
     <string name="search_button_text">Search</string>
+    <string name="search_searching">Searching...</string>
+    <string name="search_nothing_found">The server could not find any orders matching these parameters.</string>
     
     <!-- ERRORS -->
     <string name="error_search_no_id">You must specify an order ID to search for.</string>
